--- a/index.html
+++ b/index.html
@@ -140,19 +140,26 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Home
+                  <li class="nav-item">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    </li>
+                  </li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown"
+                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        MENU  
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">A</a></li>
-                            <li><a class="dropdown-item" href="#">B</a></li>
+                            <li><a class="dropdown-item" href="#">Link 1</a></li>
+                            <li><a class="dropdown-item" href="#">Link 2</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">...</a></li>
+                            <li><a class="dropdown-item" href="#">Link 3</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#"></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -185,7 +192,7 @@
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="section1-1 animate_animated animatefadeInDown animate_slow">
+            <div class="section1-1 animate__animated animate__fadeInLeft">
                 <h1 class="mb-4">Dokter adalah profesiku.</h1>
                 <p>Halo perkenalkan nama saya Nadifa Dwi Cahyani. Saya bekerja sebagai Manajer Layanan Kesehatan.
                   Sebagai seorang dokter, yang dilakukan dalam pekerjaan saya,
@@ -194,7 +201,7 @@
                   mengambil bagian dalam pertemuan Dewan Keselamatan dan Kesehatan Kerja.
                   Saya senantiasa memberikan penentuan sumber daya yang diperlukan
                   untuk pelaksanaan layanan kesehatan yang komprehensif.</p>
-                <button class="btn btn-lg btn-warning mt-4">Search</button>
+                <button class="btn btn-lg btn-warning mt-4">Klik disini</button>
             </div>
         </div>
     </section>
@@ -205,7 +212,7 @@
               <div class="row p-4">
                 <div class="col-sm-6 order-md-last text-center">
                   <div class="bounceInDown">
-                  <img src="images/target.png" alt="ilustration-2" class="ilustration-2"></div>
+                  <img src="images/wordpress-girl.svg" alt="ilustration-2" class="ilustration-2"></div>
                 </div>
                 <div class="col-sm-6">
                   <!-- lorem6 -->
@@ -238,12 +245,12 @@
           <div class="accordion" id="accordionExample">
             <div class="accordion-item mb-3">
               <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                <button class="accordion-button" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   1. MEMANAGE WAKTU DENGAN BAIK
                 </button>
               </h2>
-              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+              <div id="collapseOne" class="accordion-collapse" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   <strong>Menjadi mahasiswa kedokteran mengharuskan kamu untuk mengelola waktu secara efektif.
@@ -342,39 +349,25 @@
               <p class="mb-3">perlu diingat ya teman teman bahwa Seorang dokter mempunyai peran sentral dalam memberikan
                 pelayanan kesehatan. Maka dalam melaksanakan tugas keprofesiannya, seorang dokter harus mempunyai karakter
                 3 K, yakni Kesantunan, Kesejawatan, dan Kebersamaan.</p>
-              <p class="mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat mollitia similique
-                repellat earum, itaque quisquam!</p>
+              <p class="mb-1"></p>
               <p class="mb-1">Email: <a href="mailto:nadifadc@gmail.com">nadifadc@gmail.com</a></p>
               <p class="mb-3">Whatsapp: <a href="https://wa.me/+6281586368675" target="_blank">081586368675</a></p>
               <div class="d-flex flex-row mb-2">
-                <a href="https://www.facebook.com" class="text-warning social-icon" target="_blank">
-                  <i class="bi bi-facebook"></i>
+              </a>
+                <a href="httpas://email.com" class="text-warning social-icon mx-4" target="_blank">
+                  <i class="bi bi-email"></i>
                 </a>
-                <a href="https://www.instagram.com" class="text-warning social-icon mx-4" target="_blank">
-                  <i class="bi bi-instagram"></i>
-                </a>
-                <a href="https://id.linkedin.com" class="text-warning social-icon" target="_blank">
-                  <i class="bi bi-linkedin"></i>
-                </a>
-              </div>
-              <div class="d-flex  flex-row">
-                <a href="https://www.twitter.com" class="text-warning social-icon" target="_blank">
-                  <i class="bi bi-twitter"></i>
-                </a>
-                <a href="https://www.tiktok.com" class="text-warning social-icon mx-4" target="_blank">
-                  <i class="bi bi-tiktok"></i>
-                </a>
-                <a href="https://www.youtube.com" class="text-warning social-icon" target="_blank">
-                  <i class="bi bi-youtube"></i>
+                <a href="https://Whatsapp.com" class="text-warning social-icon" target="_blank">
+                  <i class="bi bi-whatsapp"></i>
                 </a>
               </div>
             </div>
             <div class="col-sm-2 text-center">
-              <div class="mb-3"><strong>Title Menu 1</strong></div>
+              <div class="mb-3"><strong>LAYANAN</strong></div>
               <div class="mb-3">
-                <a href="#" class="menu-footer">Menu Footer 1</a>
-                <a href="#" class="menu-footer">Menu Footer 2</a>
-                <a href="#" class="menu-footer">Menu Footer 3</a>
+                <a href="#" class="menu-footer">Dokter Spesialis Anak</a>
+                <a href="#" class="menu-footer">Dokter Spesialis penyakit dalam</a>
+                <a href="#" class="menu-footer">Dokter Spesialis bedah</a>
                 </div>
               <div class="mb-3"><strong>Title Menu 2</strong></div>
               <div class="mb-3">
